--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,3 @@
-# pytest.ini
 [tool:pytest]
 testpaths = tests
 python_files = test_*.py
@@ -10,8 +9,9 @@ addopts =
     --strict-markers
     --strict-config
     --disable-warnings
+    -p no:launch_testing  # ⬅️ DESACTIVAR PLUGIN DE ROS
 markers =
-    slow: marks tests as slow (deselect with '-m "not slow"')
+    slow: marks tests as slow
     integration: integration tests
     functional: functional tests
     unit: unit tests
